added missing parts for lpg avg and min/max aggregate